clusters/packages/layer-zero/platform/underlay/2-core/gateway-instance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ${PLATFORM_NAMESPACE}
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: postgres-direct
      protocol: TLS
      port: 5432
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              oatlabs.oatmilk.work/gateway-access: "true"
      tls:
        mode: Passthrough

    - name: web-https
      protocol: HTTPS
      port: 443
      hostname: '*.${CLUSTER_ZONE}'
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              oatlabs.oatmilk.work/gateway-access: "true"
        kinds:
          - kind: HTTPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: zone-certificate-tls
